--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<h2>Notario</h2>
 		</div>
 		<div id="home_center">
-			<div class="fullscreen background" style="background-image:url('imgs/home.jpg');" data-img-width="7000" data-img-height="4663">
+			<div class="fullscreen background" style="background-image:url('imgs/home-min.jpg');" data-img-width="7000" data-img-height="4663">
 				<div class="content-a">
 				    <div class="content-b">
 				    </div>
