--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<!-- Jquery -->
+	<!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
